--- a/abstract/Introduction.tex
+++ b/abstract/Introduction.tex
@@ -9,7 +9,11 @@
 %\usepackage{fontspec}
 %\setmainfont{Times New Roman}
 
-
+%\thispagestyle{introduction}
+%\clearpage
+%\thispagestyle{empty}
+%\markboth{Въведение}{Introduction}
+\addcontentsline{toc}{section}{Въведение}
 
 Сървърът е софтуер/операционна система на устройство, което осигурява услуга на друга програма или потребител. В център за данни (data center), физическата машина, на която се изпълнява програма, често се нарича сървър.
 		
