--- a/abstract/Introduction.tex
+++ b/abstract/Introduction.tex
@@ -5,9 +5,9 @@
 % Last modified: 24 June 2023
 %%%%%%%%%%%%%%%
 
+\clearpage
+\thispagestyle{empty}
 
-%\usepackage{fontspec}
-%\setmainfont{Times New Roman}
 
 %\thispagestyle{introduction}
 %\clearpage
