\usepackage[T1,T2A]{fontenc} and \usepackage{cmap} 2

--- a/Masters Thesis.tex
+++ b/Masters Thesis.tex
@@ -6,8 +6,9 @@
 %%%%%%%%%%%%%%%
 \documentclass[11pt, a4paper]{report}
 %\documentclass[11pt,a4paper,twoside]{article}
+\usepackage{cmap}
 
-\usepackage[T2A]{fontenc}
+\usepackage[T1,T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[bulgarian, english]{babel}
 %\setmainfont{Times New Roman}
