--- a/Masters Thesis.tex
+++ b/Masters Thesis.tex
@@ -78,14 +78,17 @@ includeheadfoot
 	\newpage
 	\clearpage	
 	\tableofcontents
+	\pagenumbering{gobble}
 	\newpage
 	
 	\clearpage
 	\listoffigures
+	\pagenumbering{gobble}
 	\newpage
 	
 	\clearpage
 	\listoftables
+	\pagenumbering{gobble}
 	\newpage
 	
 	% Hence we utilize the article document class and 'Section' higher level partitioning,
